[gd_scene load_steps=17 format=2]

[ext_resource path="res://player/katamari_physics.gd" type="Script" id=1]
[ext_resource path="res://2d/NewPatagonia-Normal.otf" type="DynamicFontData" id=2]
[ext_resource path="res://2d/BG_Size.png" type="Texture" id=3]
[ext_resource path="res://sound/snow_pickup.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/pu.wav" type="AudioStream" id=5]
[ext_resource path="res://2d/king.png" type="Texture" id=6]
[ext_resource path="res://obj/katamar.glb" type="PackedScene" id=7]
[ext_resource path="res://player/Controls.tscn" type="PackedScene" id=8]
[ext_resource path="res://player/GUI.gd" type="Script" id=10]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.1

[sub_resource type="DynamicFont" id=2]
size = 54
outline_size = 12
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 54
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="SphereShape" id=4]
radius = 0.92

[sub_resource type="SphereShape" id=5]
radius = 1.3

[sub_resource type="SphereShape" id=6]
radius = 0.703178

[sub_resource type="SphereShape" id=7]
resource_local_to_scene = true
radius = 0.9

[node name="katamari_physics" type="RigidBody"]
mass = 0.816326
physics_material_override = SubResource( 1 )
contacts_reported = 50
contact_monitor = true
axis_lock_angular_y = true
linear_damp = 1.0
script = ExtResource( 1 )

[node name="Controls" parent="." instance=ExtResource( 8 )]
visible = false

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Size_Label_Outline" type="Label" parent="GUI"]
margin_left = 31.7003
margin_top = 73.8319
margin_right = 299.7
margin_bottom = 150.832
custom_fonts/font = SubResource( 2 )
text = "13cm00mm"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG_meter1" type="TextureRect" parent="GUI"]
margin_left = -100.0
margin_top = -100.0
margin_right = 220.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 160, 160 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="BG_meter2" type="TextureRect" parent="GUI"]
modulate = Color( 1, 0.258824, 0, 1 )
margin_left = -100.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 200.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 150, 150 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Size_Label" type="Label" parent="GUI"]
margin_left = 31.7003
margin_top = 73.8319
margin_right = 299.7
margin_bottom = 150.832
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10cm00mm"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Katamari_comparator" type="Label" parent="GUI"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -630.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "katamari"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prop_comparator" type="Label" parent="GUI"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -625.0
margin_top = 73.3182
margin_bottom = 150.318
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "prop"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="katamari" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="GlomArea" type="Area" parent="katamari"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="katamari/GlomArea"]
shape = SubResource( 4 )

[node name="ScanArea" type="Area" parent="katamari"]

[node name="CollisionShape" type="CollisionShape" parent="katamari/ScanArea"]
shape = SubResource( 5 )

[node name="ClearArea" type="Area" parent="katamari"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="katamari/ClearArea"]
shape = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 7 )

[node name="grow_tween" type="Tween" parent="."]

[node name="pickup_sound_snow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="pickup_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -9.0

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.21328 )
visible = false
texture = ExtResource( 6 )

[connection signal="body_entered" from="katamari/GlomArea" to="." method="_on_GlomArea_body_entered"]
[connection signal="body_entered" from="katamari/ScanArea" to="." method="_on_ScanArea_body_entered"]
[connection signal="body_entered" from="katamari/ClearArea" to="." method="_on_ClearArea_body_entered"]
